<resources>
    <string name="app_name">Hotel Booking System</string>
    <!-- Strings related to login -->
    <string name="welcome_login">"WELCOME"</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">"Sign in "</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_link">"Not Registered ? Register Now"</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="title_activity_guest_homescreen">GuestHomescreenActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_adminhomescren">AdminhomescrenActivity</string>
    <string name="tab_text_3" />
    <string name="title_activity_managerhomescreen">ManagerhomescreenActivity</string>
    <string name="title_activity_guesthomescreen">GuesthomescreenActivity</string>
    <string name="GUEST">GUEST</string>
    <string name="MANAGER">MANAGER</string>
    <string name="ADMIN">ADMIN</string>
    <string name="SearchRoom">Search Room</string>
    <string name="Register">Register</string>
    <string name="Username">Username</string>
    <string name="guestprofile"><u><b>GUEST PROFILE</b></u></string>
    <string name="adminprofile"><u><b>ADMIN PROFILE</b></u></string>
    <string name="managerprofile"><u><b>MANAGER PROFILE</b></u></string>
    <string name="hotel_name">HOTEL NAME</string>
    <string name="todo">TODO</string>
    <string name="room_type_and_room">ROOM TYPE and ROOM</string>
    <string name="make_payment_and_confirm_reservation">MAKE PAYMENT AND CONFIRM RESERVATION</string>
    <string name="cancel_reservation">CANCEL RESERVATION</string>
    <string name="modify_pending_reservation">MODIFY PENDING RESERVATION</string>
    <string name="amenitites">AMENITITES</string>
    <string name="check_out_date">ChECK-OUT DATE</string>
    <string name="check_in_date">CHECK-IN DATE</string>
    <string name="number_of_guests">NUMBER OF GUESTS</string>
    <string name="number_of_rooms">NUMBER OF ROOMS</string>
    <string name="number">NUMBER</string>
    <string name="amount_refund">AMOUNT/REFUND</string>
    <string name="additional_payment">ADDITIONAL PAYMENT</string>
    <string name="confirmation_number">CONFIRMATION NUMBER</string>
    <string name="upcoming_reservation"> VIEW UPCOMING RESERVATION</string>
    <string name="update">UPDATE</string>
    <string name="modify_reservation">MODIFY RESERVATION</string>
    <string name="make_reservation">MAKE RESERVATION</string>
    <string name="amenities">AMENITIES</string>
    <string name="distance">DISTANCE</string>
    <string name="price">PRICE</string>
    <string name="selected_room">SELECT ROOM</string>
    <string name="reserved_room">RESERVE ROOM</string>
    <string name="view_details">VIEW DETAILS</string>
    <string name="upcoming_reservations">UPCOMING RESERVATION</string>
    <string name="amount_to_pay">AMOUNT TO PAY</string>
    <string name="room_type">ROOM TYPE</string>
    <string name="hotel_manager_contact">HOTEL MANAGER CONTACT</string>
    <string name="make_payment">Make Payment</string>
    <string name="billing_address">BILLING ADDRESS</string>
    <string name="name_on_card">NAME ON CARD</string>
    <string name="expiry_date">EXPIRY DATE</string>
    <string name="credit_card_number">CREDIT CARD NUMBER</string>
    <string name="credit_card_type">CREDIT CARD TYPE</string>
    <string name="check_in_time">Check-in-time</string>
    <string name="SearchForUser">Search for User</string>
    <string name="EnterUsername">Enter Username</string>
    <string name="Enter_Lastname">Enter Lastname</string>
    <string name="Enter_Firstname">Enter Firstname</string>
    <string name="Email">Enter Email</string>
    <string name="PhoneNumber">Enter Phone Number</string>
    <string name="Address">Enter Address</string>
    <string name="GuestRadio">Guest</string>
    <string name="ManagerRadio">Manager</string>
    <string name="view_upcoming_reservations">View Upcoming Reservations</string>
    <string name="welcome_user">WELCOME USER</string>
    <string name="number_of_children">NUMBER OF CHILDREN</string>
    <string name="view_profile">VIEW PROFILE</string>
    <string name="search_for_user">SEARCH FOR USER</string>
    <string name="user_list">USER LIST</string>
    <string name="view_guest_profile">VIEW GUEST PROFILE</string>
    <string name="view_manager_profile">VIEW MANAGER PROFILE</string>
    <string name="guest_list">GUEST LIST</string>
    <string name="manager_list">MANAGER LIST</string>
    <string name="number_of_adults">NUMBER OF ADULTS</string>
    <string name="search_for_room">SEARCH FOR ROOM</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="last_name">LAST NAME</string>
    <string name="first_name">FIRST NAME</string>
    <string name="e_mail">E-MAIL</string>
    <string name="address">ADDRESS</string>
    <string name="credit_card_expiry">CREDIT CARD EXPIRY</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="guest">GUEST</string>
    <string name="manager">MANAGER</string>
    <string name="welcome_manager">WELCOME MANAGER</string>
    <string name="view_reservation_list">VIEW RESERVATION LIST</string>
    <string name="room_number_s">ROOM NUMBER(S)</string>
    <string name="RoomList">Room List</string>
    <string name="Noofrooms">Number of Rooms</string>
    <string name="Modify_Profile">Modify Profile</string>


</resources>