<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginbackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="161dp"

            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/hotel_booking_system" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/make_payment"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


        <EditText
            android:id="@+id/CreditCardType"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/credit_card_type"
            android:inputType="text"
            android:gravity="center"
            android:background="@drawable/edittext4"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/CreditCardNumber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/credit_card_number"
            android:gravity="center"
            android:inputType="number"
            android:background="@drawable/edittext4"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/ExpiryDate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/expiry_date"
            android:gravity="center"
            android:inputType="date"
            android:background="@drawable/edittext4"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/NameonCard"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/name_on_card"
            android:inputType="text"
            android:gravity="center"
            android:background="@drawable/edittext4"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/BillingAddress"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/billing_address"
            android:inputType="text"
            android:gravity="center"
            android:background="@drawable/edittext4"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints="" />




        <Button
            android:id="@+id/MAKE_PAYMENT"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:hint="@string/make_payment"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:background="@drawable/button"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="140dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="140dp" />

    </LinearLayout>

</ScrollView>

